Unified Data Layer: CVs auto-indexed in 2nd Brain, Documents page, cross-tool search, all dots connected

--- a/templates/base.html
+++ b/templates/base.html
@@ -448,6 +448,7 @@
                 <li><a href="/second-brain" {% if request.path == '/second-brain' %}class="active"{% endif %}><i class="fas fa-database"></i> Knowledge</a></li>
                 <li><a href="/expenses" {% if request.path == '/expenses' %}class="active"{% endif %}><i class="fas fa-receipt"></i> Expenses</a></li>
                 <li><a href="/bookmarks" {% if request.path == '/bookmarks' %}class="active"{% endif %}><i class="fas fa-bookmark"></i> Bookmarks</a></li>
+                <li><a href="/documents" {% if request.path == '/documents' %}class="active"{% endif %}><i class="fas fa-folder"></i> Documents</a></li>
                 <li><a href="/search" {% if request.path == '/search' %}class="active"{% endif %}><i class="fas fa-search"></i> Search</a></li>
             </ul>
         </div>
