Product Management Tool: Feature catalog with checkboxes, roadmap builder, generate more ideas button

--- a/templates/base.html
+++ b/templates/base.html
@@ -450,6 +450,7 @@
                 <li><a href="/bookmarks" {% if request.path == '/bookmarks' %}class="active"{% endif %}><i class="fas fa-bookmark"></i> Bookmarks</a></li>
                 <li><a href="/documents" {% if request.path == '/documents' %}class="active"{% endif %}><i class="fas fa-folder"></i> Documents</a></li>
                 <li><a href="/search" {% if request.path == '/search' %}class="active"{% endif %}><i class="fas fa-search"></i> Search</a></li>
+                <li><a href="/product-management" {% if request.path == '/product-management' %}class="active"{% endif %}><i class="fas fa-cogs"></i> Product</a></li>
             </ul>
         </div>
     </nav>
